# Mosty

./: .gitignore  CMakeLists.txt  create_configs.sh
src/: CMakeLists.txt  Graphs.h  main.cpp
tests/: CMakeLists.txt  GraphTest.cpp  WideBridgesTests.cpp
